--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "test": "karma start ./karma.conf.js",
     "lint": "ng lint",
     "e2e": "protractor ./protractor.conf.js",
-    "build": "webpack && copyfiles main.js dist",
+    "build": "webpack && copyfiles main.js printer/**/* dist",
     "prepree2e": "npm start",
     "pree2e": "webdriver-manager update --standalone false --gecko false --quiet",
     "electron:serve": "electron . --serve",
@@ -36,6 +36,7 @@
     "@angular/core": "~4.0.0",
     "@angular/forms": "~4.0.0",
     "@angular/http": "~4.0.0",
+    "@angular/material": "^2.0.0-beta.3",
     "@angular/platform-browser": "~4.0.0",
     "@angular/platform-browser-dynamic": "~4.0.0",
     "@angular/router": "~4.0.0",
@@ -60,17 +61,7 @@
     "electron-reload": "^1.1.0",
     "exports-loader": "~0.6.3",
     "file-loader": "~0.10.0",
-    "istanbul-instrumenter-loader": "~2.0.0",
-    "jasmine-core": "~2.5.2",
-    "jasmine-spec-reporter": "~3.2.0",
     "json-loader": "~0.5.4",
-    "karma": "~1.4.1",
-    "karma-chrome-launcher": "~2.0.0",
-    "karma-cli": "~1.0.1",
-    "karma-coverage-istanbul-reporter": "~0.2.0",
-    "karma-jasmine": "~1.1.0",
-    "karma-jasmine-html-reporter": "~0.2.2",
-    "karma-sourcemap-loader": "~0.3.7",
     "less-loader": "~2.2.3",
     "postcss-loader": "~0.13.0",
     "postcss-url": "~5.1.2",
@@ -85,9 +76,7 @@
     "tslint": "~4.5.0",
     "typescript": "~2.2.0",
     "url-loader": "~0.5.7",
-    "webdriver-manager": "~12.0.4",
-    "webpack": "~2.3.3",
-    "webpack-dev-server": "~2.4.2"
+    "webpack": "~2.3.3"
   },
   "license": "SEE LICENSE IN LICENSE.md"
 }
