--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "electron:mac": "npm run build && copyfiles package.json dist && electron-packager . --overwrite --platform=darwin --arch=x64 --asar=true --out=app-builds"
   },
   "dependencies": {
+    "@angular/animations": "^4.0.2",
     "@angular/common": "~4.0.0",
     "@angular/compiler": "~4.0.0",
     "@angular/core": "~4.0.0",
